tests/semantic/type_system6/type_system6.err
Error: Head argument is not a subtype of its declared type in file type_system6.dl at line 15
FloatConv(1.0).
----------^-----
Error: Head argument is not a subtype of its declared type in file type_system6.dl at line 16
FloatConv(1 + 1.0) :- true.
----------^-----------------
2 errors generated, evaluation aborted
